<resources>
    <string name="app_name">SeasonalProduce</string>

    <string-array name="options">
        <item>Fruit</item>
        <item>Vegetables</item>

    </string-array>
    <string name="title_activity_produce_category">ProduceCategoryActivity</string>
    <string name="seasonal_logo">Seasonal Produce Logo</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_fruit">Favorite fruits:</string>
    <string name="favorite_vegetable">Favorite vegetables:</string>
    <string name="recipe_text">Recipes:</string>
    <string name="produce_description">Produce picture</string>
    <string name="summer">Summer</string>
    <string name="theme">Themes</string>
    <string name="autumn">autumn</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
</resources>
