<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.azza.seasonalproduce.MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/seasonal_logo"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/produce_options"
        android:entries="@array/options" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/themeText"
        android:text="@string/theme"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/summerButton"
            android:text="@string/summer"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/autumnButton"
            android:text="@string/autumn"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/winterButton"
            android:text="@string/winter"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/springButton"
            android:text="@string/spring"
            android:onClick="onClick"/>
    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_fruit"
        />

    <ListView
        android:id="@+id/list_favourite_fruit"
        android:layout_width="match_parent"
        android:layout_height="100dp"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_vegetable"
        />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/list_favourite_vegetable"/>

</LinearLayout>
