<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.azza.seasonalproduce.FruitActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:id="@+id/photo"
        android:padding="5dp"
        android:contentDescription="@string/produce_description" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:padding="5dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/season"
        android:padding="5dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:padding="5dp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favorite"
        android:text="@string/favorite"
        android:onClick="onFavoriteClicked"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/recipe_text"
        android:paddingBottom="10dp"/>
    <Button
        android:autoLink="web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recipe"
        android:foreground="@drawable/index"
        />

</LinearLayout>
